--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/images/logo/Cravvle no background.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/audible.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
-    <title>Web Design</title>
+    <title>Amazon Audible - Web Design</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -49,7 +49,7 @@
         <nav class="main-nav">
           <!-- ***** Logo Start ***** -->
           <a href="index.html" class="logo">
-            <img src="assets/images/logo/Cravvle no background.png" alt="Web Design" class="logo">
+            <img src="assets/images/logo/Audible_logo.png" alt="Web Design" class="logo" style="width:200px;height:60px;">
           </a>
           <!-- ***** Logo End ***** -->
           <!-- ***** Menu Start ***** -->
@@ -88,8 +88,8 @@
               </a>
 
               <a href="#" class="social_box google">
-                  <span class="icon"><i class="fab fa-google-plus"></i></span>
-                  <span class="icon_title">Connect with Google</span>
+                  <span class="icon"><i class="fab fa-discord"></i></span>
+                  <span class="icon_title">Connect with Discord</span>
               </a>
           </div>
 
@@ -166,15 +166,12 @@
             <div class="left-content show-up header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
               <div class="row">
                 <div class="col-lg-12">
-                  <h2>Craving For Croffles</h2>
-                  <p>Welcome to our website, dedicated to selling craffles at a cheap price.</p>
+                  <h2 class="over">Audible</h2>
+                  <p style="color:white">Welcome to our website, dedicated to selling craffles at a cheap price.</p>
                 </div>
                 <div class="col-lg-12">
-                  <div class="white-button first-button scroll-to-section">
-                    <a href="#contact">Sponsored by Apple &copy; <i class="fab fa-apple"></i></a>
-                  </div>
                   <div class="white-button scroll-to-section">
-                    <a href="#contact">Sponsored by Google &copy; <i class="fab fa-google-play"></i></a>
+                    <a href="https://www.audible.com/" target="_blank">Sponsored by Amazon &copy; <i class="fab fa-amazon"></i></a>
                   </div>
                 </div>
               </div>
@@ -182,7 +179,7 @@
           </div>
           <div class="col-lg-6">
             <div class="right-image wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
-              <img src="assets/images/slider-dec.png" alt="">
+              <img src="assets/images/22-0196-USNJACQ_Silver_AnonHero_2022_A.png">
             </div>
           </div>
         </div>
@@ -197,7 +194,7 @@
       <div class="col-lg-8 offset-lg-2">
         <div class="section-heading  wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
           <h4>Amazing <em>Services &amp; Features</em> for you</h4>
-          <img src="assets/images/heading-line-dec.png" alt="">
+          <img src="assets/images/Untitled-1.png" alt="">
           <p>If you need the greatest collection of HTML templates for your business, please visit <a rel="nofollow" href="https://www.toocss.com/" target="_blank">TooCSS</a> Blog. If you need to have a contact form PHP script, go to <a href="https://templatemo.com/contact" target="_parent">our contact page</a> for more information.</p>
         </div>
       </div>
@@ -255,7 +252,7 @@
       <div class="col-lg-6 align-self-center">
         <div class="section-heading">
           <h4>About <em>What We Do</em> &amp; Who We Are</h4>
-          <img src="assets/images/heading-line-dec.png" alt="">
+          <img src="assets/images/Untitled-1.png" alt="">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eismod tempor incididunt ut labore et dolore magna.</p>
         </div>
         <div class="row">
@@ -307,7 +304,7 @@
       <div class="col-lg-8 offset-lg-2">
         <div class="section-heading">
           <h4>Check What <em>The Clients Say</em> About Our App Dev</h4>
-          <img src="assets/images/heading-line-dec.png" alt="">
+          <img src="assets/images/Untitled-1.png" alt="">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eismod tempor incididunt ut labore et dolore magna.</p>
         </div>
       </div>
@@ -321,11 +318,11 @@
                     <div class="thumb">
                       <div class="row">
                         <div class="col-lg-4 col-sm-4 col-12">
-                          <h4>Davin Martino Co</h4>
+                          <h4>Arip</h4>
                           <span class="date">30 November 2021</span>
                         </div>
                         <div class="col-lg-4 col-sm-4 d-none d-sm-block">
-                          <span class="category">Financial Apps</span>
+                          <span class="category">Oyo</span>
                         </div>
                         <div class="col-lg-4 col-sm-4 col-12">
                             <i class="fa fa-star"></i>
@@ -333,7 +330,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
-                            <span class="rating">4.8</span>
+                            <span class="rating">5.0</span>
                         </div>
                       </div>
                     </div>
@@ -342,11 +339,11 @@
                     <div class="thumb">
                       <div class="row">
                         <div class="col-lg-4 col-sm-4 col-12">
-                          <h4>Jake Harris Nyo</h4>
+                          <h4>Susilo Bambang Sugiono</h4>
                           <span class="date">29 November 2021</span>
                         </div>
                         <div class="col-lg-4 col-sm-4 d-none d-sm-block">
-                          <span class="category">Digital Business</span>
+                          <span class="category">JAV</span>
                         </div>
                         <div class="col-lg-4 col-sm-4 col-12">
                             <i class="fa fa-star"></i>
@@ -363,11 +360,11 @@
                     <div class="thumb">
                       <div class="row">
                         <div class="col-lg-4 col-sm-4 col-12">
-                          <h4>May Catherina</h4>
+                          <h4>Eji</h4>
                           <span class="date">27 November 2021</span>
                         </div>
                         <div class="col-lg-4 col-sm-4 d-none d-sm-block">
-                          <span class="category">Business &amp; Economics</span>
+                          <span class="category">Gaming &amp; Editing</span>
                         </div>
                         <div class="col-lg-4 col-sm-4 col-12">
                             <i class="fa fa-star"></i>
@@ -375,7 +372,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
-                            <span class="rating">4.7</span>
+                            <span class="rating">4.8</span>
                         </div>
                       </div>
                     </div>
@@ -384,11 +381,11 @@
                     <div class="thumb">
                       <div class="row">
                         <div class="col-lg-4 col-sm-4 col-12">
-                          <h4>Random User</h4>
+                          <h4>Rendri</h4>
                           <span class="date">24 November 2021</span>
                         </div>
                         <div class="col-lg-4 col-sm-4 d-none d-sm-block">
-                          <span class="category">New App Ecosystem</span>
+                          <span class="category">Multimedia</span>
                         </div>
                         <div class="col-lg-4 col-sm-4 col-12">
                             <i class="fa fa-star"></i>
@@ -396,7 +393,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
-                            <span class="rating">3.9</span>
+                            <span class="rating">4.0</span>
                         </div>
                       </div>
                     </div>
@@ -405,11 +402,11 @@
                     <div class="thumb">
                       <div class="row">
                         <div class="col-lg-4 col-sm-4 col-12">
-                          <h4>Mark Amber Do</h4>
+                          <h4>Arip KW</h4>
                           <span class="date">21 November 2021</span>
                         </div>
                         <div class="col-lg-4 col-sm-4 d-none d-sm-block">
-                          <span class="category">Web Development</span>
+                          <span class="category">Web Design</span>
                         </div>
                         <div class="col-lg-4 col-sm-4 col-12">
                             <i class="fa fa-star"></i>
@@ -417,7 +414,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
-                            <span class="rating">4.3</span>
+                            <span class="rating">1.5</span>
                         </div>
                       </div>
                     </div>
@@ -437,10 +434,10 @@
                                 lorem ipsum dolor sit amet, consectetur picing elit massive big blasta.”</p>
                             </div>
                             <div class="down-content">
-                              <img src="assets/images/client-image.jpg" alt="">
+                              <img src="assets/images/aripnft.jpg" alt="">
                               <div class="right-content">
-                                <h4>Davin Martino</h4>
-                                <span>CEO of Davin Company</span>
+                                <h4>Arip</h4>
+                                <span>CEO of Arip BO</span>
                               </div>
                             </div>
                           </div>
@@ -459,10 +456,10 @@
                                 lorem ipsum dolor sit amet, consectetur picing elit massive big blasta.”</p>
                             </div>
                             <div class="down-content">
-                              <img src="assets/images/client-image.jpg" alt="">
+                              <img src="assets/images/BungSugiono.png" alt="">
                               <div class="right-content">
-                                <h4>Jake H. Nyo</h4>
-                                <span>CTO of Digital Company</span>
+                                <h4>Susilo Bambang Sugiono</h4>
+                                <span>CEO of Intl. JAV</span>
                               </div>
                             </div>
                           </div>
@@ -481,10 +478,10 @@
                                 lorem ipsum dolor sit amet, consectetur picing elit massive big blasta.”</p>
                             </div>
                             <div class="down-content">
-                              <img src="assets/images/client-image.jpg" alt="">
+                              <img src="assets/images/Eji Fixed.png" alt="">
                               <div class="right-content">
-                                <h4>May C.</h4>
-                                <span>Founder of Catherina Co.</span>
+                                <h4>Eji</h4>
+                                <span>ESport Team Arip</span>
                               </div>
                             </div>
                           </div>
@@ -503,10 +500,10 @@
                                 lorem ipsum dolor sit amet, consectetur picing elit massive big blasta.”</p>
                             </div>
                             <div class="down-content">
-                              <img src="assets/images/client-image.jpg" alt="">
+                              <img src="assets/images/Capture.PNG" alt="">
                               <div class="right-content">
-                                <h4>Random Staff</h4>
-                                <span>Manager, Digital Company</span>
+                                <h4>Rendri</h4>
+                                <span>Manager, Kopasus IT</span>
                               </div>
                             </div>
                           </div>
@@ -525,10 +522,10 @@
                                 lorem ipsum dolor sit amet, consectetur picing elit massive big blasta.”</p>
                             </div>
                             <div class="down-content">
-                              <img src="assets/images/client-image.jpg" alt="">
+                              <img src="assets/images/WhatsApp Image 2022-02-04 at 3.22.11 PM.png" alt="">
                               <div class="right-content">
-                                <h4>Mark Am</h4>
-                                <span>CTO, Amber Do Company</span>
+                                <h4>Arip KW</h4>
+                                <span>CEO, Fek bukan ril</span>
                               </div>
                             </div>
                           </div>
@@ -552,7 +549,7 @@
       <div class="col-lg-8 offset-lg-2">
         <div class="section-heading">
           <h4>We Have The Best Pre-Order <em>Prices</em> You Can Get</h4>
-          <img src="assets/images/heading-line-dec.png" alt="">
+          <img src="assets/images/Untitled-1.png" alt="">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eismod tempor incididunt ut labore et dolore magna.</p>
         </div>
       </div>
